styles.css
body {
	background-color: #7DC24F;
	margin: 0;
	padding: 0;
}
#main{
	top:50%;
	margin-top: -100px;
	left: 50%;
	margin-left: -232px;
	position: absolute;
}

#contact{
	height:80px;
	margin-top:30px;
	color: white;
	font-size: 20px;
	float: right;
}

#contact a{
	color: white;
	text-decoration: none;
}

#contact a:hover{
	text-decoration: underline;
}

#logo{
	background-image: url('images/logo.png');
	width: 464px;
	height: 113px;
}

